tests/ui/impl-trait/opaque-cast-field-access-in-future.stderr
error[E0282]: type annotations needed
  --> $DIR/opaque-cast-field-access-in-future.rs:22:17
   |
LL | fn run() -> Foo<impl Future<Output = ()>> {
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
